Overflow bug fixed

--- a/assets/styles/Scss/style.scss
+++ b/assets/styles/Scss/style.scss
@@ -11,7 +11,8 @@
      
 }
 html , body {
-    min-width: 320px;
+    min-width: 320px !important;
+    overflow-x: hidden;
 }
 ul , li {
     list-style: none;
